--- a/journey/11-mtls/profiles/tls-server.yaml
+++ b/journey/11-mtls/profiles/tls-server.yaml
@@ -1,36 +1,72 @@
-# TLS Server Certificate Profile
-# Extended Key Usage: serverAuth
-# For mTLS server authentication
+# =============================================================================
+# TLS Server Certificate Profile (ML-DSA-65)
+# =============================================================================
+#
+# Usage: Server certificate for mutual TLS authentication
+#
+# This certificate authenticates the server to clients. In mTLS scenarios,
+# both the server presents this certificate AND requires client certificates.
+#
+# Standards: FIPS 204 (ML-DSA), RFC 5280 (X.509), RFC 8446 (TLS 1.3)
+# Security Level: NIST Level 3 (~192-bit equivalent)
+# Quantum Safety: FULLY PROTECTED
+#
+# Example:
+#   pki issue --ca-dir ./mtls-ca \
+#       --profile profiles/tls-server.yaml \
+#       --cn "api.example.com" \
+#       --san "DNS:api.example.com,DNS:localhost" \
+#       --out server.crt --key-out server.key
+#
+# =============================================================================
 
 name: tls-server
 description: "TLS Server Certificate ML-DSA-65"
 
+# -----------------------------------------------------------------------------
+# Algorithm
+# -----------------------------------------------------------------------------
+algorithm: ml-dsa-65
+
+# -----------------------------------------------------------------------------
+# Validity
+# -----------------------------------------------------------------------------
+validity: 365d
+
+# -----------------------------------------------------------------------------
+# Subject DN
+# -----------------------------------------------------------------------------
 subject:
-  required:
-    - cn
   fixed:
     c: "FR"
     o: "Demo Organization"
+  required:
+    - cn
 
-validity: 365d  # 1 year
-
-signature:
-  algorithms:
-    - ml-dsa-65
-
+# -----------------------------------------------------------------------------
+# X.509 Extensions
+# -----------------------------------------------------------------------------
 extensions:
+
+  # Basic Constraints
   basicConstraints:
     critical: true
     ca: false
+
+  # Key Usage
   keyUsage:
     critical: true
     values:
       - digitalSignature
       - keyEncipherment
-  extendedKeyUsage:
+
+  # Extended Key Usage
+  extKeyUsage:
     critical: false
     values:
       - serverAuth
+
+  # Subject Alternative Name
   subjectAltName:
     critical: false
-    dns: []  # Populated at issuance
+    dns: []
