--- a/journey/00-quickstart/profiles/classic-root-ca.yaml
+++ b/journey/00-quickstart/profiles/classic-root-ca.yaml
@@ -1,28 +1,62 @@
-# Classic Root CA - ECDSA P-384 with SHA-384
-# Simplified profile for quickstart demo
+# =============================================================================
+# Classical Root CA Certificate Profile (ECDSA P-384)
+# =============================================================================
+#
+# Usage: Root CA for classical PKI demonstration
+#
+# This certificate demonstrates a traditional PKI setup using ECDSA,
+# the current industry standard for certificate signing.
+#
+# Standards: RFC 5280 (X.509), CA/Browser Forum Baseline Requirements
+# Security Level: ~192-bit (ECDSA P-384)
+# Quantum Safety: VULNERABLE
+#   ECDSA is vulnerable to quantum computers (Shor's algorithm).
+#   For quantum-resistant PKI, see journey/02-full-chain (ML-DSA).
+#
+# Example:
+#   pki init-ca --profile profiles/classic-root-ca.yaml \
+#       --name "Classic Root CA" --dir ./classic-ca
+#
+# =============================================================================
 
 name: classic-root-ca
-description: "Root CA ECDSA P-384"
+description: "Root CA ECDSA P-384 (classical, quantum-vulnerable)"
 
+# -----------------------------------------------------------------------------
+# Algorithm
+# -----------------------------------------------------------------------------
+# ECDSA P-384 provides ~192-bit security.
+# Standard choice for classical PKI root certificates.
+#
+algorithm: ecdsa-p384
+
+# -----------------------------------------------------------------------------
+# Validity
+# -----------------------------------------------------------------------------
+# 20 years for Root CA (demo purposes).
+#
+validity: 7300d
+
+# -----------------------------------------------------------------------------
+# Subject DN
+# -----------------------------------------------------------------------------
 subject:
   fixed:
     c: "FR"
     o: "Demo Organization"
 
-validity: 7300d  # 20 years
-
-signature:
-  algorithms:
-    - ec-p384
-  algo_config:
-    - scheme: ecdsa
-      hash: sha384
-
+# -----------------------------------------------------------------------------
+# X.509 Extensions
+# -----------------------------------------------------------------------------
 extensions:
+
+  # Basic Constraints (RFC 5280 Section 4.2.1.9)
   basicConstraints:
     critical: true
     ca: true
     pathLen: 1
+
+  # Key Usage (RFC 5280 Section 4.2.1.3)
   keyUsage:
     critical: true
     values:
