--- a/journey/02-full-chain/profiles/pqc-root-ca.yaml
+++ b/journey/02-full-chain/profiles/pqc-root-ca.yaml
@@ -1,26 +1,64 @@
-# Post-Quantum Root CA - ML-DSA-87
-# Maximum security for long-lived root CA
-# NIST Level 5 (~256-bit classical equivalent)
+# =============================================================================
+# Post-Quantum Root CA Certificate Profile (ML-DSA-87)
+# =============================================================================
+#
+# Usage: Root CA (offline trust anchor) for full PQC chain demonstration
+#
+# This is the trust anchor for a complete post-quantum PKI hierarchy:
+#   Root CA (ML-DSA-87) → Issuing CA (ML-DSA-65) → End-entity
+#
+# Standards: FIPS 204 (ML-DSA), RFC 5280 (X.509)
+# Security Level: NIST Level 5 (~256-bit equivalent)
+# Quantum Safety: FULLY PROTECTED
+#   ML-DSA-87 is the strongest ML-DSA variant.
+#
+# Example:
+#   pki init-ca --profile profiles/pqc-root-ca.yaml \
+#       --name "PQ Root CA" --dir ./root-ca
+#
+# =============================================================================
 
 name: pqc-root-ca
-description: "Root CA ML-DSA-87 (FIPS 204)"
+description: "Root CA ML-DSA-87 (post-quantum, NIST Level 5)"
 
+# -----------------------------------------------------------------------------
+# Algorithm
+# -----------------------------------------------------------------------------
+# ML-DSA-87 (FIPS 204) - Strongest ML-DSA variant
+#   - NIST Level 5 security (~256-bit equivalent)
+#   - Public key: ~2,592 bytes, Signature: ~4,595 bytes
+#   - Maximum protection for long-lived Root CA
+#
+algorithm: ml-dsa-87
+
+# -----------------------------------------------------------------------------
+# Validity
+# -----------------------------------------------------------------------------
+# 20 years for Root CA.
+#
+validity: 7300d
+
+# -----------------------------------------------------------------------------
+# Subject DN
+# -----------------------------------------------------------------------------
 subject:
   fixed:
     c: "FR"
     o: "Demo Organization"
 
-validity: 7300d  # 20 years
-
-signature:
-  algorithms:
-    - ml-dsa-87
-
+# -----------------------------------------------------------------------------
+# X.509 Extensions
+# -----------------------------------------------------------------------------
 extensions:
+
+  # Basic Constraints (RFC 5280 Section 4.2.1.9)
+  # pathLen: 1 allows signing one level of subordinate CAs
   basicConstraints:
     critical: true
     ca: true
     pathLen: 1
+
+  # Key Usage (RFC 5280 Section 4.2.1.3)
   keyUsage:
     critical: true
     values:
