--- a/journey/12-pqc-tunnel/profiles/pqc-ca.yaml
+++ b/journey/12-pqc-tunnel/profiles/pqc-ca.yaml
@@ -1,26 +1,55 @@
-# Post-Quantum CA - ML-DSA-65
-# For PQC tunnel demo
-# NIST Level 3 (~192-bit classical equivalent)
+# =============================================================================
+# Post-Quantum CA Certificate Profile (ML-DSA-65)
+# =============================================================================
+#
+# Usage: CA for post-quantum tunnel/KEM demonstration
+#
+# This CA issues certificates for tunnel endpoints that use ML-KEM
+# for quantum-safe key encapsulation.
+#
+# Standards: FIPS 204 (ML-DSA), RFC 5280 (X.509)
+# Security Level: NIST Level 3 (~192-bit equivalent)
+# Quantum Safety: FULLY PROTECTED
+#
+# Example:
+#   pki init-ca --profile profiles/pqc-ca.yaml \
+#       --name "PQC Tunnel CA" --dir ./tunnel-ca
+#
+# =============================================================================
 
 name: pqc-ca
 description: "PQC CA ML-DSA-65 for KEM demo"
 
+# -----------------------------------------------------------------------------
+# Algorithm
+# -----------------------------------------------------------------------------
+algorithm: ml-dsa-65
+
+# -----------------------------------------------------------------------------
+# Validity
+# -----------------------------------------------------------------------------
+validity: 3650d
+
+# -----------------------------------------------------------------------------
+# Subject DN
+# -----------------------------------------------------------------------------
 subject:
   fixed:
     c: "FR"
     o: "Demo Organization"
 
-validity: 3650d  # 10 years
-
-signature:
-  algorithms:
-    - ml-dsa-65
-
+# -----------------------------------------------------------------------------
+# X.509 Extensions
+# -----------------------------------------------------------------------------
 extensions:
+
+  # Basic Constraints
   basicConstraints:
     critical: true
     ca: true
     pathLen: 0
+
+  # Key Usage
   keyUsage:
     critical: true
     values:
